--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # MySQL設定
 DB_HOST=db
-DB_USER=testuser
-DB_PASSWORD=testuser
-DB_DATABASE=chatapp
+DB_USER=Iteam
+DB_PASSWORD=Iteam
+DB_DATABASE=tabitalk
 # MySQL root password
 DB_ROOT_PASSWORD=root
 
