Dockerフォルダ以降更新

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
+
 # db(MySQL),app(Flask)のコンテナを作成
 services:
   db:
     # コンテナ名をmysqlに設定
-    container_name: MySQL
+    container_name: Iteam_MySQL
     # MySQLのDockerfileをビルドする
     build:
       # ビルドコンテキストはカレントディレクトリ
@@ -39,7 +40,7 @@ services:
 
   app:
     # コンテナ名をFlaskに設定
-    container_name: Flask
+    container_name: Iteam_Flask
     # FlaskのDockerfileをビルドする
     build:
       # ビルドコンテキストはカレントディレクトリ
