戻るボタンのための実装

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ DB_PASSWORD=Iteam
 DB_DATABASE=tabitalk
 # MySQL root password
 DB_ROOT_PASSWORD=root
+# タイムゾーンを設定
+DB_TZ=Asia/Tokyo  
 
 # Flask設定
 FLASK_PORT=55000
